--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dynamic-survey",
   "version": "1.0.0",
   "description": "This is just a proof of concept for using react to create a responsive display during a survey.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
